# mini_redis

./: .gitignore  CMakeLists.txt  README.md
docs/: design.md
include/: command_parser.h  constants.h  server.h  storage.h
src/: command_parser.cpp  main.cpp  server.cpp  storage.cpp
tests/: storage_tests.cpp
